--- a/_config.wikitten.yml
+++ b/_config.wikitten.yml
@@ -23,12 +23,12 @@ customize:
         follow: https://github.com/HiraethEcho/
     highlight: monokai
     sidebar: left # sidebar position, options: left, right
-    category_perExpand: false # enable article categories list per expanding
+    category_perExpand: true # enable article categories list per expanding
     thumbnail: true # enable posts thumbnail, options: true, false
     favicon: /favicon.ico # path to favicon
     default_index_file: index.md # if this, it will display at site index instead of default index page
     social_links:
-        github: https://github.com/HiraethEcho/HiraethEcho.github.io
+        github: https://github.com/HiraethEcho
         # stack-overflow: http://stackoverflow.com/users/7277090/zthxxx?tab=profile
         # codepen: http://codepen.io/zthxxx/
         # rss: /atom.xml
@@ -38,7 +38,7 @@ customize:
 widgets: # default use category only
     - category
     - recent_posts
-    # - archive
+    - archive
     - tag
     # - tagcloud
     # - links
@@ -62,7 +62,7 @@ history_control: # make you wiki has history version control in page
     server_link: https://github.com # recommend use GitHub https://github.com
     user: HiraethEcho
     repertory: wiki
-    branch: writing
+    branch: main
 
 # Comment
 comment:
