update times, debug details

--- a/_config.wikitten.yml
+++ b/_config.wikitten.yml
@@ -37,10 +37,10 @@ customize:
 # Widgets
 widgets: # default use category only
     - category
+    - tagcloud
     - recent_posts
-    - archive
-    - tag
-    # - tagcloud
+    # - archive
+    # - tag
     # - links
     
 # Excerpt 
