--- a/_config.wikitten.yml
+++ b/_config.wikitten.yml
@@ -2,21 +2,21 @@
 menu:
   首页: /
   归档: /archives
-  分类: /categories
-  标签: /tags
-  关于: /about
+  # 分类: /categories
+  # 标签: /tags
+  # 关于: /about
 
 # Customize
 customize:
     logo:
-        enabled: true
+        enabled: false
         width: 40
         height: 40
         url: /logo.png
     profile:
-        enabled: false # Whether to show profile bar
-        avatar: # css/images/avatar.png
-        gravatar: wyz2016zxc@outlook.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
+        enabled: true # Whether to show profile bar
+        avatar: css/images/avatar.png
+        # gravatar: wyz2016zxc@outlook.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
         author: Hiraeth
         author_title: Student
         location: Beijing, China
@@ -24,7 +24,7 @@ customize:
     highlight: monokai
     sidebar: left # sidebar position, options: left, right
     category_perExpand: true # enable article categories list per expanding
-    thumbnail: true # enable posts thumbnail, options: true, false
+    thumbnail: false # enable posts thumbnail, options: true, false
     favicon: /favicon.ico # path to favicon
     default_index_file: index.md # if this, it will display at site index instead of default index page
     social_links:
@@ -38,10 +38,10 @@ customize:
 widgets: # default use category only
     - category
     - tagcloud
-    - recent_posts
+    # - recent_posts
     # - archive
     # - tag
-    # - links
+    - links
     
 # Excerpt 
 ## Auto creat excerpt with not <!--more-->
@@ -75,13 +75,13 @@ share: default # options: jiathis, bdshare, addtoany, default
 
 # Plugins
 plugins:
-    lightgallery: true # options: true, false
-    justifiedgallery: true # options: true, false
+    lightgallery: false # options: true, false
+    justifiedgallery: false # options: true, false
     mathjax: true # options: true, false - to enable use Mathjax in your article
     google_analytics: # enter the tracking ID for your Google Analytics
     google_site_verification: # enter Google site verification code
     baidu_analytics: # enter Baidu Analytics hash key
-    busuanzi_count: true # options: true, false - to enable busuanzi site pv statistics
+    busuanzi_count: false # options: true, false - to enable busuanzi site pv statistics
 
 # Miscellaneous
 miscellaneous:
@@ -91,3 +91,6 @@ miscellaneous:
         twitter_id:
         google_plus:
     links:
+        github: https://github.com/HiraethEcho
+        homepage: https://HiraethEcho.github.io
+        blog: https://HiraethEcho.github.io/hexo
