--- a/_config.wikitten.yml
+++ b/_config.wikitten.yml
@@ -14,7 +14,7 @@ customize:
         height: 40
         url: /logo.png
     profile:
-        enabled: true # Whether to show profile bar
+        enabled: false # Whether to show profile bar
         avatar: css/images/avatar.png
         # gravatar: wyz2016zxc@outlook.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
         author: Hiraeth
@@ -75,8 +75,8 @@ share: default # options: jiathis, bdshare, addtoany, default
 
 # Plugins
 plugins:
-    lightgallery: false # options: true, false
-    justifiedgallery: false # options: true, false
+    lightgallery: true # options: true, false
+    justifiedgallery: true # options: true, false
     mathjax: true # options: true, false - to enable use Mathjax in your article
     google_analytics: # enter the tracking ID for your Google Analytics
     google_site_verification: # enter Google site verification code
