--- a/themes/wikitten/_config_bak.yml
+++ b/themes/wikitten/_config_bak.yml
@@ -2,46 +2,46 @@
 menu:
   首页: /
   归档: /archives
-  # 分类: /categories
-  # 标签: /tags
-  # 关于: /about
+  分类: /categories
+  标签: /tags
+  关于: /about
 
 # Customize
 customize:
     logo:
-        enabled: false
+        enabled: true
         width: 40
         height: 40
-        url: /logo.png
+        url: css/images/logo.png
     profile:
-        enabled: false # Whether to show profile bar
-        avatar: css/images/avatar.png
-        # gravatar: wyz2016zxc@outlook.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-        author: Hiraeth
-        author_title: Student
-        location: Beijing, China
-        follow: https://github.com/HiraethEcho/
+        enabled: true # Whether to show profile bar
+        avatar:  css/images/avatar.png
+        # gravatar: zth_9451@qq.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
+        author: zthxxx
+        author_title: Designer & Programmer
+        location: Chengdu, China
+        follow: https://github.com/zthxxx/
     highlight: monokai
     sidebar: left # sidebar position, options: left, right
-    category_perExpand: true # enable article categories list per expanding
-    thumbnail: false # enable posts thumbnail, options: true, false
+    category_perExpand: false # enable article categories list per expanding
+    thumbnail: true # enable posts thumbnail, options: true, false
     favicon: /favicon.ico # path to favicon
     default_index_file: index.md # if this, it will display at site index instead of default index page
     social_links:
-        github: https://github.com/HiraethEcho
-        # stack-overflow: http://stackoverflow.com/users/7277090/zthxxx?tab=profile
-        # codepen: http://codepen.io/zthxxx/
-        # rss: /atom.xml
+        github: https://github.com/zthxxx/zthxxx.github.io
+        stack-overflow: http://stackoverflow.com/users/7277090/zthxxx?tab=profile
+        codepen: http://codepen.io/zthxxx/
+        rss: /atom.xml
     social_link_tooltip: true # enable the social link tooltip, options: true, false
 
 # Widgets
 widgets: # default use category only
     - category
-    - tagcloud
     # - recent_posts
     # - archive
     # - tag
-    - links
+    # - tagcloud
+    # - links
     
 # Excerpt 
 ## Auto creat excerpt with not <!--more-->
@@ -60,9 +60,9 @@ search:
 history_control: # make you wiki has history version control in page
     enable: true
     server_link: https://github.com # recommend use GitHub https://github.com
-    user: HiraethEcho
-    repertory: wiki
-    branch: main
+    user: zthxxx
+    repertory: Wiki-site
+    branch: writing
 
 # Comment
 comment:
@@ -81,7 +81,7 @@ plugins:
     google_analytics: # enter the tracking ID for your Google Analytics
     google_site_verification: # enter Google site verification code
     baidu_analytics: # enter Baidu Analytics hash key
-    busuanzi_count: false # options: true, false - to enable busuanzi site pv statistics
+    busuanzi_count: true # options: true, false - to enable busuanzi site pv statistics
 
 # Miscellaneous
 miscellaneous:
@@ -91,6 +91,3 @@ miscellaneous:
         twitter_id:
         google_plus:
     links:
-        github: https://github.com/HiraethEcho
-        homepage: https://HiraethEcho.github.io
-        blog: https://HiraethEcho.github.io/hexo
