--- a/themes/wikitten/_config.yml
+++ b/themes/wikitten/_config.yml
@@ -9,10 +9,10 @@ menu:
 # Customize
 customize:
     logo:
-        enabled: false
+        enabled: true
         width: 40
         height: 40
-        url: /logo.png
+        url: /css/images/logo.png
     profile:
         enabled: trus # Whether to show profile bar
         avatar: /css/images/avatar.png
@@ -25,7 +25,7 @@ customize:
     sidebar: left # sidebar position, options: left, right
     category_perExpand: true # enable article categories list per expanding
     thumbnail: false # enable posts thumbnail, options: true, false
-    favicon: /css/images/favicon.ico # path to favicon
+    # favicon: /css/images/favicon.ico # path to favicon
     default_index_file: index.md # if this, it will display at site index instead of default index page
     social_links:
         github: https://github.com/HiraethEcho
