--- a/themes/wikitten/_config.yml
+++ b/themes/wikitten/_config.yml
@@ -20,13 +20,17 @@ customize:
         author: Hiraeth
         author_title: Student
         location: Beijing, China
-        follow: https://github.com/HiraethEcho/
+        # follow: https://github.com/HiraethEcho/
     highlight: monokai
     sidebar: left # sidebar position, options: left, right
     category_perExpand: true # enable article categories list per expanding
     thumbnail: false # enable posts thumbnail, options: true, false
     # favicon: /css/images/favicon.ico # path to favicon
     default_index_file: index.md # if this, it will display at site index instead of default index page
+    social_links_titles:
+        github: github
+        book: blog
+        mortar-board: academia
     social_links:
         github: https://github.com/HiraethEcho
         mortar-board: https://HiraethEcho.github.io
@@ -35,7 +39,7 @@ customize:
         # stack-overflow: http://stackoverflow.com/users/7277090/zthxxx?tab=profile
         # codepen: http://codepen.io/zthxxx/
         # rss: /atom.xml
-    social_link_tooltip: false # enable the social link tooltip, options: true, false
+    social_link_tooltip: true # enable the social link tooltip, options: true, false
 
 # Widgets
 widgets: # default use category only
