mk links work for both hexo and obsidian

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: 'Asia/Shanghai'
 #TODO: url
 url: http://HiraethEcho.github.io/wiki
 root: /wiki
-permalink: wiki/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
