--- a/_config.yml
+++ b/_config.yml
@@ -43,11 +43,6 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
-## Markdown
-## https://github.com/hexojs/hexo-renderer-marked
-marked:
-  gfm: true
 
 ## Plugins: https://hexo.io/plugins/
 ### JsonContent
@@ -121,3 +116,11 @@ deploy:
   repo: git@github.com:HiraethEcho/wiki.git
   branch : gh-pages
 
+mermaid:
+ enable: true
+ version: 10.5.0
+  
+## Markdown
+## https://github.com/hexojs/hexo-renderer-marked
+marked:
+  gfm: true
