--- a/_config.wikitten.yml
+++ b/_config.wikitten.yml
@@ -4,50 +4,57 @@ menu:
   归档: /archives
   分类: /categories
   标签: /tags
-  关于: /about
+  # 关于: /about
 
 # Customize
 customize:
     logo:
         enabled: true
-        width: 40
-        height: 40
-        url: css/images/logo.png
+        width: 40px
+        height: 40px
+        url: /css/images/logo.png
     profile:
-        enabled: true # Whether to show profile bar
-        avatar:  css/images/avatar.png
-        # gravatar: zth_9451@qq.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-        author: zthxxx
-        author_title: Designer & Programmer
-        location: Chengdu, China
-        follow: https://github.com/zthxxx/
+        enabled: trus # Whether to show profile bar
+        avatar: /css/images/avatar.png
+        # gravatar: wyz2016zxc@outlook.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
+        author: Hiraeth
+        author_title: Student
+        location: Beijing, China
+        # follow: https://github.com/HiraethEcho/
     highlight: monokai
     sidebar: left # sidebar position, options: left, right
-    category_perExpand: false # enable article categories list per expanding
-    thumbnail: true # enable posts thumbnail, options: true, false
-    favicon: /favicon.ico # path to favicon
+    category_perExpand: true # enable article categories list per expanding
+    thumbnail: false # enable posts thumbnail, options: true, false
+    favicon: /css/images/favicon.ico # path to favicon
     default_index_file: index.md # if this, it will display at site index instead of default index page
+    social_links_titles:
+        github: github
+        book: blog
+        mortar-board: academia
     social_links:
-        github: https://github.com/zthxxx/zthxxx.github.io
-        stack-overflow: http://stackoverflow.com/users/7277090/zthxxx?tab=profile
-        codepen: http://codepen.io/zthxxx/
-        rss: /atom.xml
+        github: https://github.com/HiraethEcho
+        mortar-board: https://HiraethEcho.github.io
+        book: https://HiraethEcho.github.io/hexo
+        # wechat: 
+        # stack-overflow: http://stackoverflow.com/users/7277090/zthxxx?tab=profile
+        # codepen: http://codepen.io/zthxxx/
+        # rss: /atom.xml
     social_link_tooltip: true # enable the social link tooltip, options: true, false
 
 # Widgets
 widgets: # default use category only
     - category
+    - tagcloud
     # - recent_posts
     # - archive
     # - tag
-    # - tagcloud
-    # - links
+    - links
     
 # Excerpt 
 ## Auto creat excerpt with not <!--more-->
 ## Enable will truncate auto_excerpt.lines rows in post head to replace excerpt.
 auto_excerpt:
-    enable: true
+    enable: false
     lines: 5
 
 # Search
@@ -60,9 +67,9 @@ search:
 history_control: # make you wiki has history version control in page
     enable: true
     server_link: https://github.com # recommend use GitHub https://github.com
-    user: zthxxx
-    repertory: Wiki-site
-    branch: writing
+    user: HiraethEcho
+    repertory: wiki
+    branch: main
 
 # Comment
 comment:
@@ -81,9 +88,17 @@ plugins:
     google_analytics: # enter the tracking ID for your Google Analytics
     google_site_verification: # enter Google site verification code
     baidu_analytics: # enter Baidu Analytics hash key
-    busuanzi_count: true # options: true, false - to enable busuanzi site pv statistics
+    busuanzi_count: false # options: true, false - to enable busuanzi site pv statistics
 
 # Miscellaneous
+
+# mermaid chart
+mermaid: ## mermaid url https://github.com/knsv/mermaid
+  enable: true  # default true
+  version: "7.1.2"
+  options:
+    startOnload: true
+
 miscellaneous:
     open_graph: # see http://ogp.me
         fb_app_id:
@@ -91,3 +106,6 @@ miscellaneous:
         twitter_id:
         google_plus:
     links:
+        homepage: https://HiraethEcho.github.io
+        github: https://github.com/HiraethEcho
+        blog: https://HiraethEcho.github.io/hexo
