--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "theme/Wikitten"]
 	path = theme/Wikitten
 	url = git@github.com:zthxxx/hexo-theme-Wikitten.git
+[submodule "themes/Wikitten"]
+	path = themes/Wikitten
+	url = git@github.com:zthxxx/hexo-theme-Wikitten.git
