--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-.DS_Store
-Thumbs.db
-db.json
-*.log
-node_modules/
-public/
-.deploy*/
-_multiconfig.yml
-desktop.ini
+.vscode/settings.json
+.obsidian/*
