mv files, update readme, add plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,9 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   # - pymdownx.superfences
-  # - pymdownx.details
+  - pymdownx.details
+  - nl2br
+  - admonition
   # - pymdownx.magiclink
   - pymdownx.tasklist:
       custom_checkbox: true
@@ -50,6 +52,7 @@ markdown_extensions:
 
 plugins:
   - search
+  - callouts
   - roamlinks
   - blog
   - rss:
