--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,18 +14,21 @@ theme:
     - content.code.copy
     - navigation.footer
     - navigation.top
-    # - navigation.tabs
-    # - navigation.tabs.sticky
-    # - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
     - navigation.expand
-    - navigation.path
+    # - navigation.path
     - navigation.indexes
     - toc.follow
+    - search.highlight
+    - search.share
+    - search.suggest
   palette:
   # Light mode
   - media: "(prefers-color-scheme: light)"
     scheme: default
-    primary: pink
+    primary: indigo
     accent: indigo
     toggle:
       icon: material/toggle-switch-off-outline
@@ -33,7 +36,7 @@ theme:
   # Dark mode
   - media: "(prefers-color-scheme: dark)"
     scheme: slate
-    primary: pink
+    primary: indigo
     accent: blue
     toggle:
       icon: material/toggle-switch
