--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ theme:
     - navigation.top
     - navigation.tabs
     - navigation.tabs.sticky
-    # - navigation.sections
+    - navigation.sections
     - navigation.expand
     # - navigation.path
     - navigation.indexes
