--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,10 +12,10 @@ theme:
     # - content.action.edit
     # - content.action.view
     - content.code.copy
-    - navigation.footer
+    # - navigation.footer
     # - navigation.top
     - navigation.tabs
-    - navigation.tabs.sticky
+    # - navigation.tabs.sticky
     # - navigation.expand
     - navigation.path
     - navigation.indexes
