--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,10 +72,10 @@ markdown_extensions:
 plugins:
   - search
   - callouts
-  - tags:
-      tags_file: About/tags.md
-      tags_hierarchy: true
-  - roamlinks
+  # - tags:
+  #     tags_file: tags.md
+  #     tags_hierarchy: true
+  # - roamlinks
   # - blog
   - rss:
       # match_path: .* 
