--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,20 +71,22 @@ markdown_extensions:
 
 plugins:
   - search
-  - callouts
+  # - callouts
   # - tags:
   #     tags_file: tags.md
   #     tags_hierarchy: true
   # - roamlinks
   # - blog
-  - rss:
-      # match_path: .* 
-      match_path: .* 
-      date_from_meta:
-        as_creation: date
-      categories:
-        - categories
-        - tags
+  # - rss:
+  #     match_path: .* 
+  #     date_from_meta:
+  #       as_creation: date
+  #     categories:
+  #       - categories
+  #       - tags
+
+# not_in_nav: |
+#   /tutorials/**/*.md
 
 extra_javascript:
   - javascripts/mathjax.js
