--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ markdown_extensions:
 plugins:
   - search
   # - callouts
-  - blog
+  # - blog
   - tags:
       tags_file: tags.md
       tags_hierarchy: true
